--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>KaterHub - Main</title>
-    <link rel="shortcut icon" type="image/png" href="https://katergamingde.github.io/Katerhub-managment/katerhub/web-assets/Katerhubicon.png">
-    <link rel="stylesheet" href="https://katergamingde.github.io/Katerhub-managment/katerhub/web-assets/style.css">
-    <link rel="stylesheet" href="https://katergamingde.github.io/Katerhub-managment/katerhub/web-assets/custom.css">
+    <link rel="shortcut icon" type="image/png" href="https://KaterHub.github.io/main/Katerhubicon.png">
+    <link rel="stylesheet" href="https://KaterHub.github.io/main/assets/style.css">
+    <link rel="stylesheet" href="https://KaterHub.github.io/main/assets/custom.css">
 	<meta name="keywords" content="Kater, Hub, Katerhub, scripts, lua, Krnl">
     <meta content="KaterHub" property="og:title">
     <meta content="Katerhub is a Keyless and Free roblox script made for trolling and more!" property="og:description">
@@ -15,16 +15,16 @@
 
 <body>   
     <div class="navbar">
-        <img src="https://katergamingde.github.io/Katerhub-managment/katerhub/web-assets/KaterHubLogo.png" class="logo">
+        <img src="https://KaterHub.github.io/main/KaterHubLogo.png" class="logo">
         <ul>
-            <li><a href="https://katergamingde.github.io/Katerhub-managment/katerhub/web-assets/sites/Credits.html">Credits</a></li>
+            <li><a href="https://KaterHub.github.io/main/">Credits</a></li>
         </ul>
     </div>
     <div class="content">
         <h1 class="gradient-text">KATER HUB</h1>
         <p class="discription">Directories</p>
         <div> 
-            <a href="https://katergamingde.github.io/Katerhub-managment/katerhub/web-assets/sites/Script.html"><button type="button"><span></span>SCRIPT</button></a>
+            <a href="https://KaterHub.github.io/main/"><button type="button"><span></span>SCRIPT</button></a>
             <a href="https://discord.gg/"><button type="button"><span></span>JOIN DISCORD</button></a>
         </div>
     </div>
