--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <img src="https://KaterHub.github.io/main/KaterHubLogo.png" class="logo">
         <ul>
             <li><a href="https://KaterHub.github.io/main/">Credits</a></li>
+	    <li><a href="https://KaterHub.github.io/main/">Premium</a></li>
         </ul>
     </div>
     <div class="content">
