--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta content="Katerhub is a Keyless and Free roblox script made for trolling and more!" property="og:description">
     <meta content="" property="og:image">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="theme-color" content="#ffffff">	
+    <meta name="theme-color" content="#8800ff">	
 
 <body>   
     <div class="navbar">
