--- a/premium.html
+++ b/premium.html
@@ -41,14 +41,14 @@
             </div>
             <div class="package">
                 <div class="avatar">
-                    <a target="_blank" href="https://discord.com/users/995739899099615393">
-                        <img src="https://cdn.discordapp.com/avatars/995739899099615393/1fe077e2700ed722e5a16aca0b30f198.png?size=1024" alt="" srcset="">
+                    <a target="_blank" href="https://discord.com/users/848991402264494130">
+                        <img src="https://cdn.discordapp.com/avatars/848991402264494130/c80ba3f145eb37396a250dc3009b852c.png?size=1024" alt="" srcset="">
                     </a>
                 </div>
                 <hr>
                 <div class="info">
-                    <a href="https://discord.com/users/995739899099615393">Kano#1740</a>
-                    <p>Seller</p>
+                    <a href="https://discord.com/users/848991402264494130">.Loveri#0681</a>
+                    <p>Seller / Admin</p>
                 </div>
             </div>
         </div>
