--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://KaterHub.github.io/main/assets/custom.css">
 	<meta name="keywords" content="Kater, Hub, Katerhub, scripts, lua, Krnl">
     <meta content="KaterHub" property="og:title">
-    <meta content="https://katerhub.github.io/main/efr_sp.webm" property="og:description">
+    <meta content="i play fortnite" property="og:description">
     <meta content="" property="og:image">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="theme-color" content="#8800ff">	
@@ -30,3 +30,4 @@
         </div>
     </div>
 </body></html>
+https://katerhub.github.io/main/efr_sp.webm
