--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://KaterHub.github.io/main/assets/custom.css">
 	<meta name="keywords" content="Kater, Hub, Katerhub, scripts, lua, Krnl">
     <meta content="KaterHub" property="og:title">
-    <meta content="i play fortnite" property="og:description">
+    <meta content="Join Now!" property="og:description">
     <meta content="" property="og:image">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="theme-color" content="#8800ff">	
@@ -26,7 +26,7 @@
         <p class="discription">Directories</p>
         <div> 
             <a href="https://KaterHub.github.io/main/"><button type="button"><span></span>SCRIPT</button></a>
-            <a href="https://discord.gg/"><button type="button"><span></span>JOIN DISCORD</button></a>
+            <a href="https://discord.gg/gv8TGUxDzU"><button type="button"><span></span>JOIN DISCORD</button></a>
         </div>
     </div>
 </body></html>
